<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".Activities.RegistActivity">

  <ImageView
      android:id="@+id/ivLogo"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="0.3"
      app:srcCompat="@drawable/main" />

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight=".5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <EditText
          android:id="@+id/etName"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
          android:hint="@string/etName"
          android:inputType="text" />

      <EditText
          android:id="@+id/etUsername"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
          android:hint="@string/etUsername"
          android:inputType="text" />

      <EditText
          android:id="@+id/etEmail"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
          android:hint="@string/etEmail"
          android:inputType="textEmailAddress" />

      <EditText
          android:id="@+id/etPassword"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
          android:hint="@string/etPassword"
          android:inputType="textPassword" />

      <EditText
          android:id="@+id/etRePassword"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
          android:hint="@string/etRePassword"
          android:inputType="textPassword" />

      <EditText
          android:id="@+id/etNif"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/etNIF"
          android:inputType="number"
          android:text="@string/strEmpty" />

      <EditText
          android:id="@+id/etAddress"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/etAddrees"
          android:inputType="text" />

      <EditText
          android:id="@+id/etDoorNumber"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/etDoorNumber"
          android:inputType="text" />

      <EditText
          android:id="@+id/etPostalCode"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/etPostalCode"
          android:inputType="phone" />


      <Button
          android:id="@+id/btnRegister"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:backgroundTint="@color/green"
          android:onClick="onClickSignup"
          android:text="@string/btnRegister"
          android:textColor="@color/white"
          android:textColorHighlight="@color/white"
          android:textColorHint="@color/white"
          android:textColorLink="@color/white" />

    </LinearLayout>
  </ScrollView>

</LinearLayout>